feat: ipcMain & ipcRender

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- 在react里注入Electron -->
+    <script src="./render.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
